# Study-Simplifier

./: .gitignore  README.md  pyproject.toml  simplifier_web_ui.py
.devcontainer/: devcontainer.json
